<resources>
    <string name="pref_key_tts_voice">tts_voice</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="settings_tts_voice_summary">Open system text-to-speech settings to choose engine, voice, speed and pitch.</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="settings_tts_voice_title">Reading voice</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="aed_1000_word">One thousand</string>
    <string name="aed_1000_word_full">One thousand Emirati dirham</string>
    <string name="aed_100_word">One hundred</string>
    <string name="aed_100_word_full">One hundred Emirati dirham</string>
    <string name="aed_10_word">Ten</string>
    <string name="aed_10_word_full">Ten Emirati dirham</string>
    <string name="aed_200_word">Two hundred</string>
    <string name="aed_200_word_full">Two hundred Emirati dirham</string>
    <string name="aed_20_word">Twenty</string>
    <string name="aed_20_word_full">Twenty Emirati dirham</string>
    <string name="aed_500_word">Five hundred</string>
    <string name="aed_500_word_full">Five hundred Emirati dirham</string>
    <string name="aed_50_word">Fifty</string>
    <string name="aed_50_word_full">Fifty Emirati dirham</string>
    <string name="aed_5_word">Five</string>
    <string name="aed_5_word_full">Five Emirati dirham</string>
    <string name="aed_localname">Emirati dirham</string>
    <string name="afn_1000_word">One thousand</string>
    <string name="afn_1000_word_full">One thousand Afghan Afghani</string>
    <string name="afn_100_word">One hundred</string>
    <string name="afn_100_word_full">One hundred Afghan Afghani</string>
    <string name="afn_10_word">Ten</string>
    <string name="afn_10_word_full">Ten Afghan Afghani</string>
    <string name="afn_20_word">Twenty</string>
    <string name="afn_20_word_full">Twenty Afghan Afghani</string>
    <string name="afn_500_word">Five hundred</string>
    <string name="afn_500_word_full">Five hundred Afghan Afghani</string>
    <string name="afn_50_word">Fifty</string>
    <string name="afn_50_word_full">Fifty Afghan Afghani</string>
    <string name="afn_localname">Afghan Afghani</string>
    <string name="alert_button_continue">Continue</string>
    <string name="alert_camera_denied_message">"Allow the app to access the camera through the phone settings in the Privacy section.
Without this access, the app cannot work."</string>
    <string name="alert_camera_denied_title">Camera access is not yet permitted.</string>
    <string name="alert_changecurrency_downloading">Downloading data for %s.</string>
    <string name="alert_changecurrency_failed_text">Please check your internet connection and try again, or contact us.</string>
    <string name="alert_changecurrency_failed_title">Download has failed.</string>
    <string name="alert_changecurrency_processing">Preparing %s</string>
    <string name="alert_common_close">Close</string>
    <string name="alert_common_error_title">Something went wrong</string>
    <string name="alert_photos_denied_action">Open Settings</string>
    <string name="all_10000_word">Ten thousand</string>
    <string name="all_10000_word_full">Ten thousand Albanian Lek</string>
    <string name="all_1000_word">One thousand</string>
    <string name="all_1000_word_full">One thousand Albanian Lek</string>
    <string name="all_2000_word">Two thousand</string>
    <string name="all_2000_word_full">Two thousand Albanian Lek</string>
    <string name="all_200_word">Two hundred</string>
    <string name="all_200_word_full">Two hundred Albanian Lek</string>
    <string name="all_5000_word">Five thousand</string>
    <string name="all_5000_word_full">Five thousand Albanian Lek</string>
    <string name="all_500_word">Five hundred</string>
    <string name="all_500_word_full">Five hundred Albanian Lek</string>
    <string name="all_localname">Albanian Lek</string>
    <string name="amd_10000_word">Ten thousand</string>
    <string name="amd_10000_word_full">Ten thousand Armenian Drams</string>
    <string name="amd_1000_word">One thousand</string>
    <string name="amd_1000_word_full">One thousand Armenian Drams</string>
    <string name="amd_20000_word">Twenty thousand</string>
    <string name="amd_20000_word_full">Twenty thousand Armenian Drams</string>
    <string name="amd_2000_word">Two thousand</string>
    <string name="amd_2000_word_full">Two thousand Armenian Drams</string>
    <string name="amd_50000_word">Fifty thousand</string>
    <string name="amd_50000_word_full">Fifty thousand Armenian Drams</string>
    <string name="amd_5000_word">Five thousand</string>
    <string name="amd_5000_word_full">Five thousand Armenian Drams</string>
    <string name="amd_localname">Armenian Dram</string>
    <string name="android.credentials.TYPE_PASSWORD_CREDENTIAL">Password</string>
    <string name="androidx.credentials.TYPE_PUBLIC_KEY_CREDENTIAL">Passkey</string>
    <string name="androidx_camera_default_config_provider">androidx.camera.camera2.Camera2Config$DefaultProvider</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Đọc Tiền</string>
    <string name="app_unlicensed">This app is not licensed</string>
    <string name="app_unlicensed_close">Close</string>
    <string name="app_unlicensed_description">This application is not licensed nor valid. Please download the app from a trusted source.</string>
    <string name="app_version_name">2.31.0</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ars_10000_word">Ten thousand</string>
    <string name="ars_10000_word_full">Ten thousand argentine peso</string>
    <string name="ars_1000_word">One thousand</string>
    <string name="ars_1000_word_full">One thousand argentine peso</string>
    <string name="ars_100_word">One hundred</string>
    <string name="ars_100_word_full">One hundred argentine peso</string>
    <string name="ars_10_word">Ten</string>
    <string name="ars_10_word_full">Ten argentine peso</string>
    <string name="ars_20000_word">Twenty thousand</string>
    <string name="ars_20000_word_full">Twenty thousand argentine peso</string>
    <string name="ars_2000_word">Two thousand</string>
    <string name="ars_2000_word_full">Two thousand argentine peso</string>
    <string name="ars_200_word">Two hundred</string>
    <string name="ars_200_word_full">Two hundred argentine peso</string>
    <string name="ars_20_word">Twenty</string>
    <string name="ars_20_word_full">Twenty argentine peso</string>
    <string name="ars_2_word">Two</string>
    <string name="ars_2_word_full">Two argentine peso</string>
    <string name="ars_500_word">Five hundred</string>
    <string name="ars_500_word_full">Five hundred argentine peso</string>
    <string name="ars_50_word">Fifty</string>
    <string name="ars_50_word_full">Fifty argentine peso</string>
    <string name="ars_5_word">Five</string>
    <string name="ars_5_word_full">Five argentine peso</string>
    <string name="ars_localname">Argentine peso</string>
    <string name="aud_100_word">One hundred</string>
    <string name="aud_100_word_full">One hundred Australian dollars</string>
    <string name="aud_10_word">Ten</string>
    <string name="aud_10_word_full">Ten Australian dollars</string>
    <string name="aud_20_word">Twenty</string>
    <string name="aud_20_word_full">Twenty Australian dollars</string>
    <string name="aud_50_word">Fifty</string>
    <string name="aud_50_word_full">Fifty Australian dollars</string>
    <string name="aud_5_word">Five</string>
    <string name="aud_5_word_full">Five Australian dollars</string>
    <string name="aud_localname">Australian dollar</string>
    <string name="awg_100_word">One hundred</string>
    <string name="awg_100_word_full">One hundred Aruban Florins</string>
    <string name="awg_10_word">Ten</string>
    <string name="awg_10_word_full">Ten Aruban Florins</string>
    <string name="awg_200_word">Two hundred</string>
    <string name="awg_200_word_full">Two hundred Aruban Florins</string>
    <string name="awg_25_word">Twentyfive</string>
    <string name="awg_25_word_full">Twentyfive Aruban Florins</string>
    <string name="awg_50_word">Fifty</string>
    <string name="awg_50_word_full">Fifty Aruban Florins</string>
    <string name="awg_localname">Aruban Florin</string>
    <string name="banknote_onlyinfullversion">This banknote is only available in the Full version.</string>
    <string name="mainscreen_button_sendphoto">Send photo for inspection</string>
    <string name="mainscreen_button_settings">Settings</string>
    <string name="onboarding_action_nosubscription">Continue with Free version</string>
    <string name="pref_key_vibrate_always">vibrate_always</string>
    <string name="pref_key_vibrate_haptic">vibrate_haptic</string>
    <string name="pref_key_vibrate_patterns">vibrate_patterns</string>
    <string name="pref_key_vibrate_speed">vibrate_speed</string>
    <string name="pref_value_vibrations_speed_normal">normal</string>
    <string name="settings_alwaysvibrate_cell_hint">Vibrate banknote value</string>
    <string name="settings_alwaysvibrate_info">"The app can transform the identified value of a banknote into vibrations.
The vibrations are always used when your phone is in silent mode, because in silent mode the app cannot speak the value aloud.
Here, you can set it up so that the vibrations are also allowed in Ring mode."</string>
    <string name="settings_managesubscription_getfullversion">Purchase the Full version</string>
    <string name="settings_managesubscription_info_none">"You are using Free version, and the identification is limited to only low denomination banknotes. 
The Full version will help you to identify almost every banknote in the world! 
Please choose the Full version plan, which best suits your needs."</string>
    <string name="settings_writeus_button">Send us an email</string>
    <string name="tampered_app_description">"It looks like this app is not installed from Google Play, it is illegally modified or hacking apps are installed on this device. Do not worry, you can always download the original Đọc Tiền from Google Play. Please, make sure that all hacking apps are uninstalled before!
However, if you have tried fresh installation from Google Play app and this alert still appears, please contact us via the email button below.
Đọc Tiền is made possible only by the constant support coming from users subscriptions. Thank you for understanding!"</string>
    <string name="vibrations_haptic_title">Haptic feedback</string>
    <string name="vibrations_section_play_vibration_title">Play vibration patterns</string>
    <string name="vibrations_section_speed_title">Speed of vibrations</string>
</resources>