<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <CheckBoxPreference android:icon="@drawable/vibrate" android:title="@string/settings_alwaysvibrate_cell_hint" android:key="@string/pref_key_vibrate_always" android:summary="@string/settings_alwaysvibrate_info" android:defaultValue="true" />
    <ListPreference android:icon="@drawable/speed" android:entries="@array/vibration_speed" android:title="@string/vibrations_section_speed_title" android:key="@string/pref_key_vibrate_speed" android:defaultValue="@string/pref_value_vibrations_speed_normal" android:entryValues="@array/vibration_speed_value" app:useSimpleSummaryProvider="true" />
    <CheckBoxPreference android:icon="@drawable/wave" android:title="@string/vibrations_haptic_title" android:key="@string/pref_key_vibrate_haptic" android:defaultValue="false" />
    <Preference android:icon="@drawable/play_arrow" android:persistent="false" android:title="@string/vibrations_section_play_vibration_title" android:key="@string/pref_key_vibrate_patterns">
        <intent android:targetPackage="com.martindoudera.cashreader" android:action="android.intent.action.VIEW" android:targetClass="com.martindoudera.cashreader.setting.vibration.VibrationPatternActivity" />
    </Preference>
</PreferenceScreen>
