<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/windowBackground" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.camera.view.PreviewView android:id="@id/previewView" android:layout_width="match_parent" android:layout_height="match_parent" />
    <Button android:id="@id/buttonSetting" android:background="@color/toolbar" android:padding="10.0dp" android:layout_width="48.0dp" android:layout_height="48.0dp" android:foreground="@drawable/ic_settings_gear" android:minWidth="0.0dp" android:minHeight="0.0dp" android:text="" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:foregroundGravity="center" android:contentDescription="@string/mainscreen_button_settings" />
    <TextView android:textSize="21.0sp" android:textColor="@color/primary_dark" android:gravity="center_vertical" android:id="@id/textRecognition" android:background="@color/toolbar" android:padding="10.0dp" android:layout_width="match_parent" android:layout_height="48.0dp" android:layout_toLeftOf="@id/buttonSetting" android:layout_alignParentTop="true" />
    <LinearLayout android:orientation="vertical" android:id="@id/containerButtons" android:background="@color/toolbar" android:padding="5.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <TextView android:gravity="center" android:id="@id/textInfo" android:padding="10.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/Widget.Text.Body" />
        <Button android:id="@id/buttonFullVersion" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/settings_managesubscription_getfullversion" />
        <Button android:id="@id/buttonPhotoInspect" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/mainscreen_button_sendphoto" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/textContainer" android:background="@color/black_transient" android:focusable="false" android:focusableInTouchMode="false" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_above="@id/containerButtons" android:layout_below="@id/textRecognition">
        <TextView android:textStyle="bold" android:textColor="@color/yellow_light" android:gravity="center" android:id="@id/textDenomination" android:focusable="false" android:visibility="gone" android:layout_width="match_parent" android:layout_height="0.0dp" android:lines="1" android:layout_weight="3.0" android:importantForAccessibility="yes" android:accessibilityLiveRegion="assertive" app:autoSizeMaxTextSize="400.0sp" app:autoSizeMinTextSize="50.0sp" app:autoSizeStepGranularity="5.0sp" app:autoSizeTextType="uniform" style="@style/ShadowTextView" />
        <TextView android:textStyle="bold" android:textColor="@color/yellow_light" android:gravity="center" android:id="@id/textCurrency" android:visibility="gone" android:layout_width="match_parent" android:layout_height="0.0dp" android:lines="1" android:layout_weight="1.0" android:importantForAccessibility="no" app:autoSizeMaxTextSize="180.0sp" app:autoSizeMinTextSize="30.0sp" app:autoSizeStepGranularity="5.0sp" app:autoSizeTextType="uniform" style="@style/ShadowTextView" />
        <TextView android:textStyle="bold" android:textColor="@color/yellow_light" android:gravity="center" android:id="@id/textConversion" android:visibility="gone" android:layout_width="match_parent" android:layout_height="0.0dp" android:lines="1" android:layout_weight="1.0" android:importantForAccessibility="no" app:autoSizeMaxTextSize="60.0sp" app:autoSizeMinTextSize="20.0sp" app:autoSizeStepGranularity="5.0sp" app:autoSizeTextType="uniform" style="@style/ShadowTextView" />
        <TextView android:textColor="@color/yellow_light" android:gravity="center" android:id="@id/textBanknoteFullVersionOnly" android:focusable="false" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/banknote_onlyinfullversion" android:contentDescription="@string/banknote_onlyinfullversion" android:importantForAccessibility="no" app:autoSizeMaxTextSize="180.0sp" app:autoSizeMinTextSize="30.0sp" app:autoSizeStepGranularity="5.0sp" app:autoSizeTextType="uniform" style="@style/ShadowTextView" />
    </LinearLayout>
    <TextView android:textColor="@android:color/white" android:id="@id/textDebug" android:background="@color/black_transient" android:padding="10.0dp" android:focusable="false" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@id/textRecognition" android:importantForAccessibility="no" />
</RelativeLayout>
